fixing paths in cloudrun

--- a/prelovium/webapp/templates/base.html
+++ b/prelovium/webapp/templates/base.html
@@ -37,14 +37,17 @@
                 <span class="text-gray-600">•</span>
                 <div class="flex items-center space-x-4">
                     <p class="text-gray-600">If you are curious, reach out:</p>
-                    <a href="https://valbuc.github.io" target="_blank" class="text-gray-600 hover:text-gray-900">
+                    <a href="https://valbuc.github.io" target="_blank" class="text-gray-600 hover:text-gray-900 transition-transform duration-200 hover:scale-110">
                         <i class="fas fa-globe text-xl"></i>
                     </a>
-                    <a href="#" data-email-link class="text-gray-600 hover:text-gray-900">
+                    <a href="#" data-email-link class="text-gray-600 hover:text-gray-900 transition-transform duration-200 hover:scale-110">
                         <i class="fas fa-envelope text-xl"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/valentin-buchner/" target="_blank" class="text-gray-600 hover:text-gray-900">
+                    <a href="https://www.linkedin.com/in/valentin-buchner/" target="_blank" class="text-gray-600 hover:text-gray-900 transition-transform duration-200 hover:scale-110">
                         <i class="fab fa-linkedin text-xl"></i>
+                    </a>
+                    <a href="https://github.com/valbuc/prelovio" target="_blank" class="text-gray-600 hover:text-gray-900 transition-transform duration-200 hover:scale-110">
+                        <i class="fab fa-github text-xl"></i>
                     </a>
                 </div>
             </div>
